Update 3-2. 프로그래밍 전용 리포트 개발(총 정리).md

--- a/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -5280,5 +5280,1295 @@ CALL METHOD go_alv_grid->set_table_for_first_display
 </br>
 </br>
 
+## <  핵심 개념 >
+</br>
+
+- **1) Docking Container 기반 ALV 화면 구성**
+- **2) Splitter Container 기반 다중 ALV 구성**
+- **3) SUBMIT 호출 방식**
+- **4) 트랜잭션 호출 방식**
+- **5) 프로그램 간 데이터 전달 (`SUBMIT ~ WITH`)**
+- **6) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)**
+- **7) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory)**
+</br>
+
+- **C01에서 더블클릭 이벤트 발생해도 자동으로 PAI/PBO 안 탐**
+- **더블클릭 이후 로직은 기본적으로 C01에서만 처리**
+</br>
+</br>
+
+---
+
+</br>
+
+## < ALV Docking Container >
+</br>
+
+### 1) Docking Container 기반 ALV 화면 구성
+
+- `Docking Container` : 선택화면을 유지한 채 화면 가장자리에 ALV를 고정 표시하기 위한 컨테이너
+- `side` : 도킹 위치 (TOP / BOTTOM / LEFT / RIGHT)
+- `extension` : 도킹 영역 크기
+- Docking Container 사용 시 → 별도의 AREA(스크린 영역) 필요 없음.
+
+```abap
+*************** TOP ****************
+DATA: <DOCKING_CONTAINER> TYPE REF TO cl_gui_docking_container,
+      <ALV_GRID>          TYPE REF TO cl_gui_alv_grid.
+
+DATA: <ITAB> TYPE TABLE OF <DDIC_STRUCTURE>.
+
+*************** Docking Container ****************
+IF <DOCKING_CONTAINER> IS INITIAL.
+  CREATE OBJECT <DOCKING_CONTAINER>
+    EXPORTING
+      side      = <DOCK_POSITION>
+      extension = <SIZE>
+      repid     = <PROGRAM_ID>
+      dynnr     = <SCREEN_NO>.
+
+  CREATE OBJECT <ALV_GRID>
+    EXPORTING
+      i_parent = <DOCKING_CONTAINER>.
+ENDIF.
+
+*************** Docking ALV 최초 출력 ****************
+CALL METHOD <ALV_GRID>->set_table_for_first_display
+  EXPORTING
+    i_structure_name = <DDIC_STRUCTURE>
+  CHANGING
+    it_outtab        = <ITAB>.
+```
+- `UP TO <ROW_COUNT> ROWS` : 조회 결과 중 최대 N건까지만 내부테이블에 담음 (성능/미리보기용)
+```abap
+SELECT *
+  FROM <DB_TABLE>
+  INTO TABLE <ITAB>
+  UP TO <ROW_COUNT> ROWS
+  WHERE <CONDITION>.
+```
+```abap
+REPORT zprogb03_0030.
+
+*************** REPORT PROGRAM ****************
+PARAMETERS: pa_car TYPE s_carr_id DEFAULT 'AA'.
+
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+DATA: gt_data TYPE TABLE OF sflight.
+
+***********************************************
+AT SELECTION-SCREEN OUTPUT.
+  IF go_docking IS INITIAL.
+    SELECT * FROM sflight INTO TABLE gt_data
+      UP TO 20 ROWS
+      WHERE carrid = pa_car.
+
+    CHECK sy-subrc = 0. " 참이면 아래 로직 실행
+    " Docking Container 생성
+    CREATE OBJECT go_docking
+      EXPORTING
+        side      = cl_gui_docking_container=>dock_at_bottom
+        extension = 300
+        repid     = sy-repid
+        dynnr     = sy-dynnr.
+    " Docking Container에 ALV 생성
+    CREATE OBJECT go_alv EXPORTING i_parent = go_docking.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+
+START-OF-SELECTION.
+  SELECT * FROM sflight INTO TABLE gt_data
+    UP TO 20 ROWS
+    WHERE carrid = pa_car.
+
+  IF sy-subrc = 0.
+    CALL METHOD go_alv->refresh_table_display
+      EXCEPTIONS
+        finished       = 1
+        others         = 2.
+    IF sy-subrc <> 0.
+      MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+```
+</br>
+</br>
+</br>
+
+### 2) Splitter Container 기반 다중 ALV 구성
+- 하나의 화면(또는 Docking 영역)을 여러 영역으로 나눠, 각 영역에 서로 다른 ALV를 동시에 보여주기 위해 사용
+- `cl_gui_splitter_container` : 하나의 컨테이너를 행·열로 분할해 여러 영역을 동시에 사용할 수 있게 해주는 컨테이너 클래스
+- `->get_container` : Splitter로 나뉜 특정 행·열 위치의 하위 컨테이너를 가져오는 메서드
+```abap
+*************** TOP ****************
+DATA: <DOCKING_CONTAINER>  TYPE REF TO cl_gui_docking_container,
+      <SPLITTER_CONTAINER> TYPE REF TO cl_gui_splitter_container,
+      <LEFT_CONTAINER>     TYPE REF TO cl_gui_container,
+      <RIGHT_CONTAINER>    TYPE REF TO cl_gui_container,
+      <ALV_LEFT>           TYPE REF TO cl_gui_alv_grid,
+      <ALV_RIGHT>          TYPE REF TO cl_gui_alv_grid.
+
+*************** Docking Container ****************
+CREATE OBJECT <DOCKING_CONTAINER>
+    EXPORTING
+      side      = <DOCK_POSITION>
+      extension = <SIZE>
+      repid     = <PROGRAM_ID>
+      dynnr     = <SCREEN_NO>.
+
+*************** Splitter Container ****************
+CREATE OBJECT <SPLITTER_CONTAINER>
+  EXPORTING
+    parent  = <PARENT_CONTAINER>
+    rows    = <ROW_COUNT>
+    columns = <COLUMN_COUNT>.
+
+*************** Split 영역 Container 획득 ****************
+CALL METHOD <SPLITTER_CONTAINER>->get_container      " 왼쪽
+  EXPORTING
+    row    = <ROW_NO>
+    column = <COL_NO_LEFT>
+  RECEIVING
+    container = <LEFT_CONTAINER>.
+CALL METHOD <SPLITTER_CONTAINER>->get_container      " 오른쪽
+  EXPORTING
+    row    = <ROW_NO>
+    column = <COL_NO_RIGHT>
+  RECEIVING
+    container = <RIGHT_CONTAINER>.
+
+*************** Split 영역에 ALV 생성 ****************
+CREATE OBJECT <ALV_LEFT>      " 왼쪽
+  EXPORTING
+    i_parent = <LEFT_CONTAINER>.
+CREATE OBJECT <ALV_RIGHT>      " 오른쪾
+  EXPORTING
+    i_parent = <RIGHT_CONTAINER>.
+```
+```abap
+REPORT zprogb03_0030.
+
+*************** TOP ****************
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_splitter TYPE REF TO cl_gui_splitter_container,
+      go_cont_l   TYPE REF TO cl_gui_container,
+      go_cont_r   TYPE REF TO cl_gui_container,
+      go_alv_l    TYPE REF TO cl_gui_alv_grid,
+      go_alv_r    TYPE REF TO cl_gui_alv_grid.
+
+*************** Docking Container ****************
+CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
+
+*************** Splitter Container ****************
+CREATE OBJECT go_splitter            " Container 영역 분할 (1행 2열로)
+EXPORTING parent  = go_docking
+        rows    = 1
+        columns = 2.
+
+*************** Split 영역 Container 획득 ****************
+CALL METHOD go_splitter->get_container      " 왼쪽 영역 컨테이너
+EXPORTING row    = 1
+          column = 1
+RECEIVING container = go_cont_l.
+CALL METHOD go_splitter->get_container      " 오른쪽 영역 컨테이너
+EXPORTING row    = 1
+          column = 2
+RECEIVING container = go_cont_r.
+
+*************** Split 영역에 ALV 생성 ****************
+CREATE OBJECT go_alv_l
+EXPORTING i_parent = go_cont_l.
+CREATE OBJECT go_alv_r
+EXPORTING i_parent = go_cont_r.
+```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP 프로그램·트랜잭션 호출 방식 정리 >
+- **ABAP Memory** : 같은 사용자 세션(SAP GUI 창) 안에서만 공유되는 메모리
+- **SAP Memory** : 세션을 넘어 다른 창·트랜잭션에서도 공유 가능한 메모리
+- **`SUBMIT / CALL TRANSACTION`** → ABAP Memory 사용 가능
+- **`LEAVE TO TRANSACTION`** → SAP Memory만 사용 가능
+- 서로 다른 External Session(SAP GUI 창) 간에는 ABAP Memory 공유 불가 → 데이터 전달이 필요한 경우 SAP Memory 사용
+- SAP Memory는 사용자 로그아웃 시 초기화됨
+</br>
+
+### 1) SUBMIT 호출 방식
+- 다른 프로그램을 잠깐 실행했다가 돌아오는 방식 → 같은 메모리(ABAP Memory) 그대로 사용
+</br>
+
+- 다른 프로그램 실행만 하고 자동으로 돌아오지 않음
+```abap
+SUBMIT prog_name_2.
+```
+- 다른 프로그램 실행 후 끝나면 원래 프로그램으로 돌아옴
+```abap
+SUBMIT prog_name_2 AND RETURN.
+```
+- 실행 전 조회조건 화면을 보여주고, 끝나면 원래 프로그램으로 돌아옴
+```abap
+SUBMIT prog_name_2 VIA SELECTION-SCREEN AND RETURN.
+```
+</br>
+</br>
+
+**1) SUBMIT ZPROGB03_CALLED.**
+
+- `ZPROGB03_CALLED` 만 실행되고 “CALL 프로그램으로 돌아왔어요!”는 안 찍힘
+  
+**2) SUBMIT ZPROGB03_CALLED AND RETURN.**
+
+- `PROGB03_CALLED` 실행 후 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+  
+**3) SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.**
+
+- `ZPROGB03_CALLED` 의 조회조건 화면을 먼저 보여준 뒤 실행하고, 끝나면 돌아와서 “CALL 프로그램으로 돌아왔어요!”가 찍힘
+
+```abap
+*************** CALL ****************
+REPORT ZPROGB03_CALL.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+START-OF-SELECTION.
+
+SUBMIT ZPROGB03_CALLED
+VIA SELECTION-SCREEN
+AND RETURN
+WITH pa_car2 = pa_car
+WITH so_con2 IN so_con.
+SUBMIT ZPROGB03_CALLED.
+SUBMIT ZPROGB03_CALLED AND RETURN.
+SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
+
+*SUBMIT ZPROGB03_CALLED.
+*SUBMIT ZPROGB03_CALLED AND RETURN.
+*SUBMIT ZPROGB03_CALLED VIA SELECTION-SCREEN AND RETURN.
+
+WRITE: 'CALL 프로그램으로 돌아왔어요!'.
+
+*************** CALLED ****************
+REPORT ZPROGB03_CALLED.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+IF sy-subrc = 0.
+  LOOP AT gt_sflight INTO gs_sflight.
+    WRITE:/ gs_sflight-carrid,
+            gs_sflight-connid,
+            gs_sflight-fldate,
+            gs_sflight-seatsmax,
+            gs_sflight-seatsocc.
+    CLEAR: gs_sflight.
+  ENDLOOP.
+ELSE.
+  WRITE:/ 'No data'.
+ENDIF.
+```
+</br>
+</br>
+</br>
+
+### 2) 트랜잭션 호출 방식
+- 현재 프로그램 종료 후 트랜잭션으로 이동 (복귀 ❌)
+- 내부 세션이 종료되어 ABAP Memory는 리셋됨
+- 새로운 세션으로 트랜잭션이 시작되며 SAP Memory만 유지됨
+```abap
+LEAVE TO TRANSACTION 'T_CODE'
+```
+- 트랜잭션의 첫 화면을 건너뛰고 바로 실행
+```abap
+LEAVE TO TRANSACTION 'T_CODE' AND SKIP FIRST SCREEN
+```
+- 트랜잭션 실행 후 종료 시 원래 프로그램으로 복귀 ⭕
+- 트랜잭션 화면을 열었다가 끝나면 돌아옴 → 메모리 유지됨
+```abap
+CALL TRANSACTION 'T_CODE'
+```
+</br>
+</br>
+
+**1) LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'**
+
+- ZTCODEB03_CALLED로 넘어가서 실행되고 CALL 프로그램으로 돌아오지 않아 "CALL 프로그램으로 돌아왔어요!"는 안 찍힘
+
+**2) LEAVE TO TRANSACTION 'ZTCODEB03_CALLED' AND SKIP FIRST SCREEN**
+
+- ZTCODEB03_CALLED를 조회조건 화면 없이 바로 실행하고, CALL 프로그램으로 돌아오지 않음
+
+**3) CALL TRANSACTION 'ZTCODEB03_CALLED'**
+
+- ZTCODEB03_CALLED를 실행한 뒤 돌아와서 "CALL 프로그램으로 돌아왔어요!"가 찍힘
+
+```abap
+*************** CALL ****************
+REPORT ZPROGB03_CALL.
+
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  SELECTION-SCREEN BEGIN OF LINE.
+    SELECTION-SCREEN COMMENT pos_low(20) TEXT-001 FOR FIELD pa_rad1.
+    PARAMETERS: pa_rad1 RADIOBUTTON GROUP RAD.
+    SELECTION-SCREEN COMMENT pos_high(20) TEXT-002 FOR FIELD pa_rad2.
+    PARAMETERS: pa_rad2 RADIOBUTTON GROUP RAD DEFAULT 'X'.
+  SELECTION-SCREEN END OF LINE.
+SELECTION-SCREEN END OF BLOCK blk1.
+
+START-OF-SELECTION.
+CASE 'X'.
+  WHEN pa_rad1.
+*    LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'
+    LEAVE TO TRANSACTION 'ZTCODEB03_CALLED'
+    AND SKIP FIRST SCREEN.
+  WHEN pa_rad2.
+    CALL TRANSACTION 'ZTCODEB03_CALLED'.
+  WHEN OTHERS.
+ENDCASE.
+
+WRITE: 'CALL 프로그램으로 돌아왔어요!'.
+```
+</br>
+</br>
+</br>
+
+### 3) 프로그램 간 데이터 전달
+- 앞 프로그램에서 입력한 값을 다음 프로그램으로 그대로 넘길 때 사용
+```abap
+SUBMIT <CALLED_PROGRAM>
+  VIA SELECTION-SCREEN AND RETURN
+  WITH <CALLED_PARM> = <CALL_PARM>
+  WITH <CALLED_SO>   IN <CALL_SO>.
+```
+```abap
+*************** CALL ****************
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+START-OF-SELECTION.
+
+SUBMIT ZPROGB03_CALLED
+VIA SELECTION-SCREEN
+AND RETURN
+WITH pa_car2 = pa_car
+WITH so_con2 IN so_con.
+
+*************** CALLED ****************
+PARAMETERS: pa_car2 TYPE s_carr_id.
+SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
+```
+
+</br>
+</br>
+</br>
+
+### 4) EXPORT / IMPORT를 이용한 ABAP Memory 데이터 공유 (ABAP Memory)
+- 프로그램을 이동해도 이전에 입력한 값을 다시 쓰기 위해 ABAP Memory를 사용함
+- `LEAVE TO TRANSACTION` 은 세션을 종료하므로 ABAP Memory(EXPORT/IMPORT)는 사용 불가
+- `CALL` 프로그램에서 저장한 값을 같은 창에서 `CALLED` 프로그램을 실행하면 정상적으로 가져옴
+- 새 창(New Session)에서 `CALLED` 프로그램을 실행하면 ABAP Memory를 못 가져와 `No data` 발생
+```abap
+" ABAP Memory에 값 저장
+EXPORT
+  <MEM_PARM> FROM <CALL_PARM>
+  <MEM_SO>   FROM <CALL_SO>
+  TO MEMORY ID '<MEMORY_ID>'.
+
+" ABAP Memory에서 값 불러오기
+IMPORT
+  <MEM_PARM> TO <CALLED_PARM>
+  <MEM_SO>   TO <CALLED_SO>
+  FROM MEMORY ID '<MEMORY_ID>'.
+
+" ABAP Memory 초기화
+FREE MEMORY ID '<MEMORY_ID>'.
+```
+```abap
+*************** CALL ****************
+PARAMETERS: pa_car TYPE s_carr_id.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid.
+
+FREE MEMORY ID 'CARCON'.
+
+EXPORT
+  p1 FROM pa_car
+  s1 FROM so_con
+  TO MEMORY ID 'CARCON'.
+
+*************** CALLED ****************
+PARAMETERS: pa_car2 TYPE s_carr_id.
+SELECT-OPTIONS: so_con2 FOR gs_sflight-connid.
+
+IMPORT
+  p1 TO pa_car2
+  s1 TO so_con2
+  FROM MEMORY ID 'CARCON'.
+
+FREE MEMORY ID 'CARCON'.
+```
+</br>
+</br>
+</br>
+
+### 5) MEMORY ID를 이용한 조회조건 자동 유지 (SAP Memory, SET / GET PARAMETER ID)
+- 한 번 입력한 조회조건을 SAP이 기억해두었다가, 다음 실행 때 자동으로 다시 채워줌
+```abap
+PARAMETERS: <PARAM> TYPE <TYPE> MEMORY ID '<MEM_ID>'.
+SELECT-OPTIONS: <SO> FOR <FIELD> MEMORY ID '<MEM_ID>'.
+
+" SAP Memory 초기화
+SET PARAMETER ID '<MEM_ID>' FIELD SPACE.
+```
+```abap
+*************** CALL ****************
+PARAMETERS: pa_car TYPE s_carr_id MEMORY ID CAR1.
+SELECT-OPTIONS: so_con FOR gs_sflight-connid MEMORY ID CON1.
+
+SET PARAMETER ID 'CAR1' FIELD SPACE. " SAP Memory 초기화
+
+*************** CALLED ****************
+PARAMETERS: pa_car2 TYPE s_carr_id MEMORY ID CAR1.
+SELECT-OPTIONS: so_con2 FOR gs_sflight-connid MEMORY ID CON1.
+```
+- SAP Memory에 값을 저장하고 같은 세션의 다른 프로그램·화면에서 그 값을 자동으로 전달·조회하는 기능
+```abap
+*************** SET ****************
+SET PARAMETER ID '<MEM_ID>' FIELD <FIELD>.
+
+*************** GET ****************
+GET PARAMETER ID '<MEM_ID>' FIELD <FIELD>.
+```
+```abap
+*************** SET ****************
+SET PARAMETER ID 'CAR1' FIELD pa_car.     
+SET PARAMETER ID 'CON1' FIELD pa_conn.   
+
+*************** GET ****************
+GET PARAMETER ID 'CAR1' FIELD pa_car2.    
+GET PARAMETER ID 'CON1' FIELD pa_conn2.   
+```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+</br>
+
+- 문제
+<img width="356" height="196" alt="image" src="https://github.com/user-attachments/assets/4888e9dc-6d7b-43c1-ac54-52f8f3c76a29" />
+</br>
+</br>
+</br>
+</br>
+
+**1) Report 프로그램에서 모듈 생성**
+```abap
+REPORT ZPROGB03_0031.
+
+INCLUDE ZPROGB03_0031_TOP.
+INCLUDE ZPROGB03_0031_O01.
+INCLUDE ZPROGB03_0031_I01.
+INCLUDE ZPROGB03_0031_F01.
+
+START-OF-SELECTION.
+  PERFORM get_data.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm,
+      go_dock TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+DATA: gt_sflight TYPE TABLE OF sflight.
+
+PARAMETERS: pa_car TYPE sflight-carrid DEFAULT 'AZ'.
+```
+</br>
+
+**3) `PBO` 및 `F01` 모듈 생성**
+```abap
+*************** F01 ****************
+FORM get_data.
+  SELECT * FROM SFLIGHT
+    INTO TABLE gt_sflight
+    UP TO 30 ROWS
+    WHERE carrid = pa_car.
+ENDFORM.
+
+*************** PBO ****************
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ENDMODULE.
+
+MODULE init_alv OUTPUT.
+  IF go_dock IS INITIAL.
+    CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
+
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_dock.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_sflight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ELSE.
+    IF sy-subrc = 0.
+      CALL METHOD go_alv->refresh_table_display
+        EXCEPTIONS
+          finished       = 1
+          others         = 2.
+      IF sy-subrc <> 0.
+        MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+      ENDIF.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_I01
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*----------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**5) 결과 확인**
+
+<img width="284" height="96" alt="image" src="https://github.com/user-attachments/assets/386d3fff-0177-4a29-b0ea-08e209effe26" />
+</br>
+
+<img width="454" height="258" alt="image" src="https://github.com/user-attachments/assets/2aa8ec00-46bf-4df0-b667-80620cbd6164" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+</br>
+
+- 문제
+<img width="330" height="183" alt="image" src="https://github.com/user-attachments/assets/254b894d-5b6d-443b-8bf2-5ab47bb16ce7" />
+
+</br>
+</br>
+</br>
+
+**1) Report 프로그램에서 모듈 수정**
+```abap
+REPORT ZPROGB03_0031.
+
+INCLUDE ZPROGB03_0031_TOP.
+INCLUDE ZPROGB03_0031_C01.
+INCLUDE ZPROGB03_0031_O01.
+INCLUDE ZPROGB03_0031_I01.
+INCLUDE ZPROGB03_0031_F01.
+
+START-OF-SELECTION.
+  PERFORM get_data2.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm,
+      go_dock TYPE REF TO cl_gui_docking_container,
+      go_splitter TYPE REF TO cl_gui_splitter_container,
+      go_cont_l TYPE REF TO cl_gui_container,
+      go_cont_r TYPE REF TO cl_gui_container,
+      go_alv_l TYPE REF TO cl_gui_alv_grid,
+      go_alv_r TYPE REF TO cl_gui_alv_grid.
+```
+</br>
+
+**3) `F01` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_F01
+*&---------------------------------------------------------------------*
+
+*************** SFLIGHT 데이터ㅗ ****************
+FORM get_data.
+  READ TABLE gt_spfli INTO gs_spfli INDEX gv_index.
+
+  SELECT * FROM SFLIGHT
+    INTO TABLE gt_sflight
+    UP TO 30 ROWS
+    WHERE carrid = gs_spfli-carrid
+      AND connid = gs_spfli-connid.
+ENDFORM.
+
+*************** SPFLI 데이터 ****************
+FORM get_data2.
+  SELECT * FROM SPFLI
+    INTO TABLE gt_spfli
+    UP TO 30 ROWS
+    WHERE carrid = pa_car.
+ENDFORM.
+
+*************** REFRESH ****************
+FORM set_refresh.
+  CALL METHOD go_alv_r->refresh_table_display
+    EXCEPTIONS
+      finished       = 1
+      others         = 2.
+  IF sy-subrc <> 0.
+    MESSAGE 'Refresh 작업 중 오류 발생' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+```
+</br>
+
+**4) `C01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_C01
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS: ON_DOUBLE_CLICK
+    FOR EVENT DOUBLE_CLICK OF CL_GUI_ALV_GRID
+    IMPORTING ES_ROW_NO SENDER.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD ON_DOUBLE_CLICK.
+    IF SENDER = GO_ALV_L.
+      gv_index = ES_ROW_NO-row_id.
+      PERFORM get_data.
+      PERFORM set_refresh.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**5) `PBO` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZPROGB03_0031_O01
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_dock IS INITIAL.
+
+*************** Docking Container 생성 ****************
+    CREATE OBJECT go_dock
+      EXPORTING
+        repid                       = sy-repid
+        dynnr                       = sy-dynnr
+        side                        = cl_gui_docking_container=>dock_at_bottom
+        extension                   = 300.
+
+*************** Splitter 생성 (1행 2열) ****************
+    CREATE OBJECT go_splitter
+    EXPORTING parent = go_dock
+              rows = 1
+              columns = 2.
+
+*************** Split 영역 Container 획득 ****************
+    CALL METHOD go_splitter->get_container
+    EXPORTING row = 1
+              column = 1
+    RECEIVING container = go_cont_l.
+    CALL METHOD go_splitter->get_container
+    EXPORTING row = 1
+              column = 2
+    RECEIVING container = go_cont_r.
+
+*************** Split 영역에 ALV 생성 ****************
+    CREATE OBJECT go_alv_l
+    EXPORTING i_parent = go_cont_l.
+    CREATE OBJECT go_alv_r
+    EXPORTING i_parent = go_cont_r.
+
+*************** 데이터 조회 ****************
+    SET HANDLER lcl_event_handler=>on_double_click FOR go_alv_l.
+
+    CALL METHOD go_alv_r->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = gt_sflight
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+
+    PERFORM get_data.
+    CALL METHOD go_alv_l->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SPFLI'
+      CHANGING
+        it_outtab                     = gt_spfli
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**6) 결과 확인**
+
+- 더블클릭 시 데이터 출력
+<img width="535" height="240" alt="image" src="https://github.com/user-attachments/assets/0faf79a3-c470-4a4f-9e7a-d27efd122f58" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+</br>
+</br>
+
+# 01/06
+</br>
+</br>
+
+## <  핵심 개념 >
+</br>
+
+- **1) BDC (Batch Data Creation)**
+- **2) SAP Job(백그라운드 잡) - SM36, SM37**
+- **3) CLIENT(MANDT) 지정 방식 – 구문법 vs 신문법**
+- **4)  Open SQL INSERT 구문**
+- **5) Open SQL UPDATE 구문**
+</br>
+
+- **`UPDATE` 는 기존 레코드만 수정하고, `MODIFY` 는 있으면 수정·없으면 INSERT까지 수행**
+</br>
+</br>
+
+---
+
+</br>
+
+## < SAP 자동 실행 처리 기법 >
+</br>
+
+### 1) BDC (Batch Data Creation)
+- 실제 트랜잭션 화면 입력 과정을 BDCDATA에 기록해 프로그램으로 자동 실행하는 방식
+</br>
+
+**< CALL TRANSACTION - MODE 옵션 >**
+
+| MODE | 설명 |
+|------|------|
+| A | 모든 화면 표시 / 진행 중 수정 가능 |
+| E | 정상 흐름은 숨기고 오류 화면만 표시 |
+| N | 화면 없이 백그라운드 처리 (사용자는 못 봄) |
+| P | 오류 발생 시 화면 일시정지 |
+
+**< CALL TRANSACTION - UPDATE 옵션 >**
+
+| UPDATE | 설명 |
+|--------|------|
+| S | 동기 처리 (작업 완료 후 프로그램 복귀) |
+| A | 비동기 처리 (즉시 복귀, 작업은 백그라운드 진행) |
+
+</br>
+
+```abap
+*************** BDC Dynpro 시작 ****************
+PERFORM set_bdcdata USING 'X' <PROGRAM> <SCREEN>.
+* <PROGRAM> : Dynpro 프로그램명
+* <SCREEN>  : Dynpro 번호
+
+
+*************** BDC 화면 필드 입력 ****************
+PERFORM set_bdcdata USING ' ' <FIELDNAME> <VALUE>.
+* <FIELDNAME> : 화면 필드명 (예: BDC_OKCODE, PA_CAR2)
+* <VALUE>     : 입력값
+
+
+*************** BDC DATA 공통 FORM ****************
+FORM set_bdcdata USING pv_dynbegin   " Dynpro 시작 여부 ('X' / ' ')
+                       pv_fname      " 프로그램명 or 필드명
+                       pv_fval.      " 화면번호 or 입력값
+
+  CLEAR gs_bdcdata.
+  IF pv_dynbegin EQ abap_true.        " Dynpro 시작
+    gs_bdcdata-dynbegin = abap_true.
+    gs_bdcdata-program  = pv_fname.
+    gs_bdcdata-dynpro   = pv_fval.
+  ELSE.                              " 화면 필드 입력
+    gs_bdcdata-fnam = pv_fname.
+    gs_bdcdata-fval = pv_fval.
+  ENDIF.
+  APPEND gs_bdcdata TO gt_bdcdata.    " BDCDATA 한 줄 적재
+ENDFORM.
+```
+```abap
+REPORT ZPROGB03_CALL.
+
+*************** BDC DATA 선언부 ****************
+DATA: gs_bdcdata      TYPE bdcdata,             " BDCDATA 단건 구조
+      gt_bdcdata      TYPE STANDARD TABLE OF bdcdata,
+      lt_bdc_message  TYPE STANDARD TABLE OF bdcmsgcoll.
+
+
+*************** BDC DATA 적재 (CALL 쪽) ****************
+PERFORM set_bdcdata USING:
+* STARTID   PROGRAM / FIELDNAME    SCREEN / VALUE
+  'X'       'ZPROGB03_CALLED'      '1000',      " Dynpro 시작
+  ' '       'BDC_CURSOR'           'SO_CON2-HIGH',
+  ' '       'BDC_OKCODE'           '=ONLI',
+  ' '       'PA_CAR2'              'AA',
+  ' '       'SO_CON2-LOW'          '17',
+  ' '       'SO_CON2-HIGH'         '64',
+  'X'       'SAPMSSY0'              '0120',     " 팝업 Dynpro
+  ' '       'BDC_OKCODE'           '=BACK',
+  'X'       'ZPROGB03_CALLED'      '1000',      " 원화면
+  ' '       'BDC_OKCODE'           '/EE',
+  ' '       'BDC_CURSOR'           'PA_CAR2'.
+
+*************** BDC CALL TRANSACTION ****************
+CALL TRANSACTION 'ZTCODEB03_CALLED'
+  USING gt_bdcdata
+  MODE 'A'
+  UPDATE 'S'
+  MESSAGES INTO lt_bdc_message.
+
+*************** BDC DATA 함수 ****************
+FORM set_bdcdata  USING    pv_dynbegin
+                           pv_fname
+                           pv_fval.
+  CLEAR gs_bdcdata.
+  IF pv_dynbegin EQ abap_true. " pv_dynbegin = 'X'
+    gs_bdcdata-dynbegin = abap_true.
+    gs_bdcdata-program = pv_fname.
+    gs_bdcdata-dynpro = pv_fval.
+  ELSE.
+    gs_bdcdata-fnam = pv_fname.
+    gs_bdcdata-fval = pv_fval.
+  ENDIF.
+  APPEND gs_bdcdata TO gt_bdcdata.
+ENDFORM.
+```
+</br>
+
+- system -> services -> batch input -> recorder 클릭
+<img width="498" height="258" alt="image" src="https://github.com/user-attachments/assets/70fb2045-a16b-4189-a43b-6dc7289f1fb0" />
+</br>
+</br>
+
+- new recording 누르고 start recording 클릭
+<img width="441" height="413" alt="image" src="https://github.com/user-attachments/assets/2f12a82d-cd6e-4f78-804f-6c51306bbd57" />
+</br>
+</br>
+
+- 녹화 후 Process 클릭하여 실행
+<img width="471" height="379" alt="image" src="https://github.com/user-attachments/assets/25131805-f01f-4c9f-a0d4-f34736a3188c" />
+</br>
+</br>
+
+- 만든 레코드 확인 가능
+<img width="501" height="150" alt="image" src="https://github.com/user-attachments/assets/b56b127f-f634-4c8b-833d-1325e1f61d4d" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 2) SAP Job(백그라운드 잡) - SM36, SM37
+- Job = 사람이 안 눌러도 정해진 조건/시간에 ABAP 프로그램을 자동 실행하는 작업
+- **SM36** → 잡(Job) 생성
+- **SM37** → 생성된 잡(Job) 조회 / 상태 확인
+</br>
+
+- 백그라운드 잡에서는 ALV 사용 불가 (화면 인스턴스 생성 불가)
+- 시스템 변수 `sy-batch = 'X'` → 현재 백그라운드 실행 중
+- 이 경우 ALV 대신 WRITE, 스풀, 파일 출력 등으로 처리
+```abap
+REPORT ZPROGB03_0032.
+
+DATA: gt_data TYPE TABLE OF ZDBWORK_B03,
+      gs_data LIKE LINE OF gt_data.
+
+SELECT * FROM ZDBWORK_B03
+  INTO TABLE gt_data
+  ORDER BY WORKNO DESCENDING." 내림차순
+
+CHECK sy-subrc = 0.
+
+READ TABLE gt_DATA INTO GS_DATA INDEX 1.
+ADD 1 TO gs_data-workno.
+
+*********** 처음 넣은 데이터 ***********
+gs_data-workno = 1.
+gs_data-workdesc = 'hello work~~'.
+gs_data-ernam = sy-uname. " 유저이름
+gs_data-erdat = sy-datum. " 현재 일자
+gs_data-erzet = sy-uzeit. " 현재 시간
+***************************************
+
+gs_data-workdesc = 'hello work~~'.
+gs_data-ernam = sy-uname. " 유저이름
+gs_data-erdat = sy-datum. " 현재 일자
+gs_data-erzet = sy-uzeit. " 현재 시간
+
+INSERT ZDBWORK_B02 FROM gs_data.
+IF sy-subrc = 0.
+  SELECT * FROM ZDBWORK_B03
+    INTO TABLE gt_data
+    ORDER BY workno DESCENDING.
+  cl_demo_output=>display( gt_data ).
+ENDIF.
+```
+</br>
+
+- `SM36` 로 JOB 생성하기
+- 프로그램 이름 지정
+<img width="448" height="279" alt="image" src="https://github.com/user-attachments/assets/b2b681d2-7fc4-4bf3-bc4f-9779b6f4eea4" />
+</br>
+</br>
+
+- JOB 시작 조건을 주기적 실행으로 설정해 20분마다 백그라운드 JOB을 자동 실행하도록 설정
+- `No Start After` : 종료일이 아님. 시작일의 유효기간. 종료일은 빈칸으로 둬야 함.
+<img width="459" height="369" alt="image" src="https://github.com/user-attachments/assets/da67cc6f-53a4-4032-9a56-7644a4695deb" />
+</br>
+</br>
+
+- `SM37` 에서 생성된 JOB 확인 가능
+<img width="458" height="328" alt="image" src="https://github.com/user-attachments/assets/81eb3a77-eb99-4185-aabb-f116a08e790b" />
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP Open SQL 핵심 문법 정리 >
+</br>
+
+### 1) CLIENT(MANDT) 지정 방식 – 구문법 vs 신문법
+- Open SQL에서 특정 클라이언트(MANDT)의 데이터를 직접 지정해 조회
+```abap
+*************** Open SQL CLIENT 지정 – 구문법 (형식) ****************
+SELECT <FIELDS>
+  INTO TABLE <ITAB>
+  FROM <DB_TABLE>
+  CLIENT SPECIFIED
+  WHERE mandt = <CLIENT>.
+
+
+*************** Open SQL CLIENT 지정 – 신문법 (형식) ****************
+SELECT <FIELDS>
+  INTO TABLE @<ITAB>
+  FROM <DB_TABLE>
+  USING CLIENT <CLIENT>.
+```
+```abap
+REPORT ZPROGB03_0033.
+
+*************** Open SQL – CLIENT 지정 (구문법) ****************
+SELECT * INTO TABLE gt_scarr
+  FROM scarr
+  CLIENT SPECIFIED
+  WHERE mandt = '100'.   
+* WHERE MANDT BETWEEN '000' AND '900'.
+
+*************** Open SQL – CLIENT 지정 (신문법) ****************
+SELECT * INTO TABLE @gt_scarr
+  FROM scarr
+  USING CLIENT '000'.    
+```
+</br>
+</br>
+
+### 2) Open SQL INSERT 구문
+- 워크에어리어로 단건, 내부테이블로 여러 건 데이터를 DB에 저장
+- `ACCEPTING DUPLICATE KEYS` 를 사용하면 중복 키는 건너뛰고 나머지 데이터만 INSERT됨
+- 중복 키 상태에서 INSERT를 실행하면 → 덤프 발생
+- **`sy-dbcnt`** 로 실제 INSERT된 결과를 확인
+```abap
+*************** 단건 INSERT ****************
+INSERT INTO <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  VALUES <WORK_AREA>.        " 워크에어리어 1건 INSERT
+
+INSERT <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " VALUES와 동일 의미
+
+*************** 다중 INSERT ****************
+INSERT <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>
+  [ACCEPTING DUPLICATE KEYS]. " 내부테이블 여러 건 INSERT
+```
+```abap
+REPORT ZPROGB03_0033.
+
+DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
+      gs_scustom TYPE ZTSCUSTOM_B03.
+* DELETE FROM ZTSCUSTOM_B03. => ACCEPTING DUPLICATE KEYS 안하면 써야함
+
+*************** 단건 INSERT (Work Area) ****************
+SELECT SINGLE *
+  FROM SCUSTOM
+  INTO gs_scustom
+  WHERE ID = 1.
+
+INSERT INTO ZTSCUSTOM_B03 VALUES gs_scustom.
+INSERT ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 다중 INSERT (Internal Table) ****************
+SELECT * FROM scustom
+  INTO TABLE gt_scustom
+  WHERE ID BETWEEN 1 AND 50.
+
+INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom
+  ACCEPTING DUPLICATE KEYS.
+```
+</br>
+</br>
+
+### 3) Open SQL UPDATE 구문
+- 기존 DB 레코드를 PK 기준으로 1건 수정하거나, 조건(WHERE)에 맞는 여러 건을 한 번에 수정할 수 있음
+- 수정된 레코드 수는 **`sy-dbcnt`** 로 확인 가능 (0이면 대상 없음)
+- UPDATE는 기존 레코드만 수정하고, MODIFY는 있으면 수정·없으면 INSERT까지 수행
+```abap
+*************** 단건 UPDATE (Work Area) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " PK 기준 1건 수정
+
+*************** 단건 / 다중 UPDATE (SET / WHERE) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  SET <FIELD1> = <VALUE1>,
+      <FIELD2> = <VALUE2>
+  WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 필드만 단건/다중 수정
+
+*************** 다중 UPDATE (Internal Table 방식) ****************
+UPDATE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>.          " 내부테이블 기준 여러 건 수정
+```
+```abap
+REPORT ZPROGB03_0033.
+
+*************** 단건 UPDATE (Work Area) ****************
+gs_scustom-id = 1.
+gs_scustom-name = 'change name'.
+UPDATE ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 단건 / 다중 UPDATE (SET / WHERE) ****************
+gs_scustom-id = 2.
+gs_scustom-name = 'second change'.      " 단건 변경
+UPDATE ZTSCUSTOM_B03
+   SET name = gs_scustom-name
+       street = 'hihi'
+   WHERE ID = gs_scustom-id.
+
+UPDATE ZTSCUSTOM_B03
+  SET form = 'My form'                  " 여러건 변경
+      city = 'Walldorf'
+      country = 'DE'
+  WHERE id BETWEEN 10 AND 20.
+
+*************** 다중 UPDATE (Internal Table 방식) ****************
+SELECT * FROM scustom
+  INTO TABLE gt_scustom
+  WHERE id BETWEEN 10 AND 20.
+
+LOOP AT gt_scustom INTO gs_scustom.
+  gs_scustom-form = 'My form'.
+  gs_scustom-city = 'Walldorf'.
+  gs_scustom-country = 'DE'.
+  MODIFY gt_scustom FROM gs_scustom.
+ENDLOOP.
+UPDATE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+```
+</br>
+</br>
+
+### 4) Open SQL MODIFY 구문
+- PK 기준으로 데이터가 있으면 UPDATE, 없으면 INSERT 수행
+- **`sy-dbcnt`** 로 실제 반영된 수정 결과를 확인
+- `APPENDING TABLE` : 기존 내부테이블을 비우지 않고 SELECT 결과를 뒤에 계속 추가하는 방식
+```abap
+*************** 단건 MODIFY (Work Area) ****************
+MODIFY <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " 있으면 UPDATE, 없으면 INSERT
+
+*************** 다중 MODIFY (Internal Table 방식) ****************
+MODIFY <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>.          " 여러 건 UPSERT 처리
+```
+```abap
+REPORT ZPROGB03_0033.
+
+*************** 단건 MODIFY (Work Area) ****************
+gs_scustom-id = 500.
+gs_scustom-form = '변경~~'.
+gs_scustom-name = 'MODIFY 변경~~'.
+MODIFY ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 다중 MODIFY (Internal Table 방식) ****************
+gs_scustom-name = 'modify name'.
+MODIFY gt_scustom FROM gs_scustom
+TRANSPORTING name WHERE id <> space.
+
+SELECT *
+  APPENDING TABLE gt_scustom
+  FROM scustom
+  WHERE ID IN ( 193, 195, 197 ).
+" 완성된 itab을 db tab에 modify
+MODIFY ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+```
+</br>
+</br>
+
+### 5) Open SQL DELETE 구문
+- PK 기준으로 단건 삭제하거나 조건(WHERE)에 맞는 여러 건 삭제 가능
+- 삭제된 레코드 수는 **`sy-dbcnt`** 로 확인
+- 조건이 맞는 데이터가 없으면 아무 것도 삭제되지 않음
+```abap
+*************** 단건 DELETE (Work Area) ****************
+DELETE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM <WORK_AREA>.          " PK 기준 1건 삭제
+
+*************** 단건 / 다중 DELETE (WHERE) ****************
+DELETE FROM <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  WHERE <FULL_QUALIFIED_KEY>. " 조건에 맞는 단건/다중 삭제
+
+*************** 다중 DELETE (Internal Table 방식) ****************
+DELETE <DB_TABLE>
+  [CLIENT SPECIFIED | USING CLIENT <CLIENT>]
+  FROM TABLE <ITAB>.          " 내부테이블의 PK 기준으로 여러 건 삭제
+```
+```abap
+REPORT ZPROGB03_0033.
+
+*************** 단건 DELETE (Work Area) ****************
+gs_scustom-id = 1.
+DELETE ZTSCUSTOM_B03 FROM gs_scustom.
+
+*************** 단건 / 다중 DELETE (WHERE) ****************
+DELETE FROM ZTSCUSTOM_B03 WHERE ID = 2.    " 단건 삭제
+
+DELETE FROM ZTSCUSTOM_B03
+  WHERE ID BETWEEN 55 AND 60.              " 여러건 삭제
+
+*************** 다중 DELETE (Internal Table 방식) ****************
+" DELETE FROM ZTSCUSTOM_B03 " (주의) 전체 삭제
+
+SELECT * FROM ZTSCUSTOM_B03
+  INTO TABLE gt_scustom
+  WHERE ID <= 50.
+DELETE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+```
+
+</br>
+</br>
+
+# 01/07
+</br>
+</br>
+
 </br>
 </br>
