Update 3-1. 프로그래밍 전용 웹 스크린 개발(총 정리).md

--- a/ABAP 심화/3-1. 프로그래밍 전용 웹 스크린 개발(총 정리).md
+++ b/ABAP 심화/3-1. 프로그래밍 전용 웹 스크린 개발(총 정리).md
@@ -7,7 +7,16 @@
 
 - **1) `module pool program` 생성 방법 ( 일반 프로그램 생성 방법에서 include 파일 포함 )**
 - **2) 모듈풀 프로그램은 무조건 `TCODE` 생성해야 함**
+</br>
 
+- **값 있으면 조건 걸고 / 이니셜이면 조건 무시**
+```abap
+SELECT *
+  FROM sflight
+  INTO TABLE gt_data
+  WHERE ( carrid = p_carr OR p_carr IS INITIAL )
+    AND ( connid = p_conn OR p_conn IS INITIAL ).
+```
 </br>
 
 ---
